css/styles.css
h1 {
  color: rgb(0, 225, 255);
  text-align: center;
  font-size: 2em;
}

h2 {
  font-style: italic;
  text-align: center;
}

h3 {
  font-style: italic;
  text-align: none;
}

h4 {
  font-style: italic;
  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
  font-size: medium;
  text-align: none;
  color: aquamarine;
}

h5 {
  font-style: italic;
  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
  font-size: medium;
  text-align: none;
  color: aquamarine;
}

p {
  font-family: sans-serif;
  margin-left: 1em
}

ul.no_bullet {
  list-style-type: none;
  padding: 0;
  margin: 0;
  font-size: 16px;
  line-height: 11px;
}
li.fish{
  background: url('../../images/fish\ bullet.JPG')no-repeat;
  height: 30px;
  padding-left: 40px;
  padding-top: 10px;
}
img {
  float: right;
}
.sidebar {
  width: 33%;
  height: 500px;
  float: left;
  background-color: rgba(174, 221, 190, 0.979);

}
.col-4 {
  width: 200px;
  height: fit-content;
  float: right;
  width: 100px
}
.p {
  color: rgb(9, 0, 128);
  font-size: small;
}
.card-title {
  color: black;
  font-size: large;
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  font-style: normal;
}
.card-text {
  color: black;
  font-size: medium;
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
  font-style: normal;
}
.card-body {
  color:  azure;
}
.card {
  color: azure;
}
.highlight2 {
  color: lime;
}
.highlight3 {
  color: orange;
}
.centered-image {
  margin: auto;
  width: 50%;
  height: auto;
}
.jumbotron {
  height: 100px ;
  background-image: url('img/header.JPG'); 
  background-size: cover; 
  background-repeat: no-repeat; 
  }  
}
.column-lg{
  float: right;
  width: 600%;
  padding-left: 0px;
}
.column-xl{
  float: left;
  width: 200%;
}
.container-fluid {
  border: 3px solid #fff;
  padding: 20px;
}

.float-child {
  width: 50%;
  float: left;
  padding: 20px;
  border: 2px green;
}  
.column1padding {
  float: right;
  padding-left: 100px;
}
.sidebar {
  float: left;
  color: forestgreen ;
}

